# othello

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: othello-gui.yml
benches/: bench_board.rs  bench_minimax.rs
crates/othello_ai/: Cargo.toml
crates/othello_ai/benches/: bench_minimax.rs
crates/othello_ai/src/: alphabeta.rs  immediate.rs  lib.rs  minimax.rs  random.rs
crates/othello_ai/tests/: test_minimax.rs
crates/othello_game/: Cargo.toml
crates/othello_game/benches/: bench_board.rs
crates/othello_game/src/: bitboard.rs  bitboardgame.rs  default.rs  direction.rs  lib.rs
crates/othello_game/tests/: test_game.rs
crates/othello_gui/: Cargo.toml
crates/othello_gui/src/: computer.rs  game.rs  main.rs  rendering.rs  utils.rs
gui/: gui.d.ts  gui.js  gui_bg.wasm.d.ts  index.html  wasm_example.js  wasm_example_bg.wasm.d.ts
src/: game.rs  lib.rs
src/ai/: immediate.rs  minimax.rs  mod.rs  random.rs
src/game/: bitboard.rs  bitboardgame.rs  default.rs  direction.rs  mod.rs
tests/: test_game.rs  test_minimax.rs
