[workspace]
resolver = "2"
members = ["crates/*",]
default-members = [".", "crates/othello_game", "crates/othello_ai"]

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
criterion = "0.6"
rand = "0.8"

[package]
name = "othello"
version.workspace = true
edition.workspace = true

[dependencies]
rand.workspace = true
othello_ai = { path = "crates/othello_ai" }
othello_game = { path = "crates/othello_game" }
