[package]
name = "othello_gui"
version.workspace = true
edition.workspace = true

[dependencies]
othello_ai = { path = "../othello_ai" }
othello_game = { path = "../othello_game" }

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_render",
    "bevy_text",
    "bevy_winit",
    "webgl2"
]
